--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -3,7 +3,7 @@
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
 <link rel="stylesheet" type="text/css" href="../tools/ctut.css"/>
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
-<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
+<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
@@ -74,6 +74,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <style>
 body {
   margin: 0;
+  font-size: 40;
   //background: #000;
   //color: #fff;
 }
@@ -164,6 +165,18 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problems for practice">Problems for practice</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Sets and Venn diagrams">Sets and Venn diagrams</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Axioms">Axioms</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Equally likely">Equally likely</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Harder">Harder</a>
+</li>
 </ul>
 <hr/>
 $\newcommand{\ev}{{\mathcal F}}$
@@ -175,7 +188,7 @@ element of this set is called a <b>sample point</b>.
 By the term <b>event</b>  we understand a subset of the sample
 space. 
 <p>
-<b>EXAMPLE ():</b>&nbsp;A coin toss is a random experiment. Its sample space is $\{head,tail\}.$  There are four
+<b>EXAMPLE 1:</b>&nbsp;A coin toss is a random experiment. Its sample space is $\{head,tail\}.$  There are four
  different events possible here: 
 $\phi, \{head\},\{tail\},\{head,tail\}.$
  ///
@@ -184,7 +197,7 @@ $\phi, \{head\},\{tail\},\{head,tail\}.$
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;Rolling a die is another random experiment. The sample space here is $\{1,2,3,4,5,6\}.$ 
+<b>EXAMPLE 2:</b>&nbsp;Rolling a die is another random experiment. The sample space here is $\{1,2,3,4,5,6\}.$ 
  One possible event is the set of all even numbers, $\{2,4,6\}.$ ///
 </p>
 
@@ -204,7 +217,7 @@ In probability theory we take the total as $1.$  This choice
 is justified by statistical regularity, as the following example
 shows.
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 3:</b>&nbsp;
 Consider rolling a fair die. Let $A$ be the event that we
 get a prime number, <i>i.e.</i>, $A=\{2,3,5\}.$ Intuitively, the
 probability of $A$ should be $\frac 12.$  We shall use R to 
@@ -291,7 +304,7 @@ Of course, not all such functions  can be a probability. A function needs to sat
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 4:</b>&nbsp;
 A report says that the health condition in a country is so bad, that the chance of a newborn baby surviving for at least
  1 year is only 50%. However, the chance that he survives for at least 5 years is 90%. Does it sound odd?
 <p></p>
@@ -381,7 +394,7 @@ conditions from these axioms. Here is one.
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 5:</b>&nbsp;
 If $A\subseteq B$ then show that $P(A)\leq P(B).$
 <p></p>
 <b>SOLUTION:</b>
@@ -411,24 +424,24 @@ Try your hand at these:
 <p></p>
 
 <p>
-<b>EXERCISE:</b>&nbsp;
+<b>EXERCISE 1:</b>&nbsp;
 Show $P(A^c) = 1-P(A).$
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE:</b>&nbsp;Show $P(\phi)=0.$</p>
+<b>EXERCISE 2:</b>&nbsp;Show $P(\phi)=0.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE:</b>&nbsp;If $A_1\subseteq A_2\subseteq A_3,$  then show that $P(A_1\cup A_1\cup A_3) = P(A_1)+P(A_2\cap A_1^c)+P(A_3\cap A_2^c).$</p>
+<b>EXERCISE 3:</b>&nbsp;If $A_1\subseteq A_2\subseteq A_3,$  then show that $P(A_1\cup A_1\cup A_3) = P(A_1)+P(A_2\cap A_1^c)+P(A_3\cap A_2^c).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE:</b>&nbsp;
+<b>EXERCISE 4:</b>&nbsp;
 Show $P(A\cup B) = P(A)+P(B)-P(A\cap B).$
 </p>
 
@@ -754,9 +767,10 @@ conditions.
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 6:</b>&nbsp;
 There are three distinct boxes and 10 distinct balls. The balls are dropped randomly among the boxes so that all possible
- configurations are equally likely. (No ball is outside a box.) What is the probability that the first box is empty?
+ configurations are equally likely. (No ball is outside a box,
+ and each box can hold all the balls.) What is the probability that the first box is empty?
 <p></p>
 <b>SOLUTION:</b>
 Each of the 10 balls has 3 possible destinations, irreespective of the other balls. So the total 
@@ -773,7 +787,7 @@ $$P(A)= \frac{|A|}{|\Omega|} = \left(\frac 23\right)^{10}.$$
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 7:</b>&nbsp;
 Same problem as above, except that the balls are now identical. The boxes are still distinct. 
 What is the answer now?
 <p></p>
@@ -793,7 +807,7 @@ terms for the exams!).
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 8:</b>&nbsp;
 There are $r$ (identical/distinct) particles. Each particle may be in
 one of $n$ distinct states. We can think of the particles as
 balls and the states as boxes. For example, if the states are UP
@@ -865,7 +879,7 @@ in detecting theoretical mistakes too.
 <p></p>
 
 <p>
-<b>EXAMPLE ():</b>&nbsp;
+<b>EXAMPLE 9:</b>&nbsp;
 A deck of 10 cards labelled 1,...,10 is shuffled thoroughly. We shall
 say that the $i$-th card is <i>at home</i>, if it is in
 the $i$-th positon after the shuffle. Write an R code to
@@ -899,9 +913,15 @@ mean(event)
 <h2><a
 name="Problems for practice">Problems for practice</a></h2>
 
-<ol type="">
+<p></p>
 
-<li>Let $E,F,G$ be any three events. Find expressions for
+<h3><a
+name="Sets and Venn diagrams">Sets and Venn diagrams</a></h3>
+
+<p></p>
+
+<p>
+<b>EXERCISE 5:</b>&nbsp;Let $E,F,G$ be any three events. Find expressions for
 the event that of $E,F,G$
 <ol type="">
 
@@ -927,20 +947,30 @@ the event that of $E,F,G$
 
 </ol>
 
-</li>
 
-<li>Show that $E\cap (F\cup G) = (E\cap F)\cup (E\cap
-G).$</li>
+</p>
 
-<li>Show that $(A\cup B)^c = A^c \cap B^c.$</li>
+<p></p>
 
-<li>State (with proof) which of the following statements is
+<p>
+<b>EXERCISE 6:</b>&nbsp;Show that $E\cap (F\cup G) = (E\cap F)\cup (E\cap
+G).$</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 7:</b>&nbsp;Show that $(A\cup B)^c = A^c \cap B^c.$</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 8:</b>&nbsp;State (with proof/counterexample) which of the following statements is
 correct/incorrect:
 <ol type="">
 
 <li>$(A\cup B)\setminus C = A\cup (B\setminus C).$</li>
 
-<li>$A\cap B\cap C = A\cap  B(C\cup B).$</li>
+<li>$A\cap B\cap C = A\cap  (C\cup B).$</li>
 
 <li>$A\cup B\cup C = A\cup (B\setminus (A\cap B))\cup
 (C\setminus (A\cap C)).$</li>
@@ -949,101 +979,193 @@ correct/incorrect:
 
 </ol>
 
-</li>
-
-<li>Take $S = \{0,1,2\}.$ Obtain
-functions $P_i:S\rightarrow{\mathbb R}$ for $i=1,2,3$ such
-that $P_i$ violates axiom $i$, but satisfies the other
-two.</li>
-
-<li>If $P(A)=0.9$ and $P(B)=0.8,$ show that $P(A\cap
-B)\geq 0.7.$ In general, show that $P(A\cap B)\geq
-P(A)+P(B)-1.$ This is known as Bonferroni's inequality.</li>
-
-<li>Show that 
-$$
-P\left( \cup_1^n A_i\right) \leq \sum_1^n P(A_i).
-$$
-</li>
+</p>
 
 <p></p>
 
-<li>An SRSWOR of size 2 is drawn from $\{1,2,3,4,5\}.$ What
+<h3><a
+name="Axioms">Axioms</a></h3>
+
+<p></p>
+
+<p>
+<b>EXERCISE 9:</b>&nbsp;Take $\Omega = \{0,1,2\}.$ Obtain
+functions $P_i:\Omega\rightarrow{\mathbb R}$ for $i=1,2,3$ such
+that $P_i$ violates axiom $i$, but satisfies the other
+two.</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 10:</b>&nbsp;If $P(A)=0.9$ and $P(B)=0.8,$ show that $P(A\cap
+B)\geq 0.7.$ In general, show that $P(A\cap B)\geq
+P(A)+P(B)-1.$ This is known as Bonferroni's
+inequality.
+</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 11:</b>&nbsp;Show that 
+$$
+P\left( \cup_1^n A_i\right) \leq \sum_1^n P(A_i).
+$$
+</p>
+
+<p></p>
+
+<h3><a
+name="Equally likely">Equally likely</a></h3>
+
+<p></p>
+
+<p>
+<b>EXERCISE 12:</b>&nbsp;An SRSWOR of size 2 is drawn from $\{1,2,3,4,5\}.$ What
 is the probability that (a) the first selected digit is odd?
 (b) the second selected digit is odd? (c) both are odd? (d) at
 least one is odd?
-</li>
+</p>
 
-<li>A fair coin is tossed 6 times. What is the probability that
+<p></p>
+
+<p>
+<b>EXERCISE 13:</b>&nbsp;A fair coin is tossed 6 times. What is the probability that
 the first head occurs (a) at the third toss? (b) not before the
-third toss?</li>
+third toss?</p>
 
-<li>10 distinct balls are dropped randomly in 3 distinct
-boxes. What is the probability that none of the boxes remain empty?</li>
+<p></p>
 
-<li>Two fair dice are tossed, what is the probability that the
-sum is $i$ for $i=2,3,...,12?$</li>
+<p>
+<b>EXERCISE 14:</b>&nbsp;10 distinct balls are dropped randomly in 3 distinct
+boxes. What is the probability that none of the boxes remain
+empty?</p>
 
-<li>Two cards are randomly selected from a deck of 52 playing
+<p></p>
+
+<p>
+<b>EXERCISE 15:</b>&nbsp;Two fair dice are tossed, what is the probability that the
+sum is $i$ for $i=2,3,...,12?$</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 16:</b>&nbsp;Two cards are randomly selected from a deck of 52 playing
 cards. What is the probability that they are of the same
-denomination?</li>
+denomination?</p>
 
-<li>10 light bulbs are shining in a row. If a lightning strikes, then
+<p></p>
+
+<p>
+<b>EXERCISE 17:</b>&nbsp;10 light bulbs are shining in a row. If a lightning strikes, then
 some (or all or none) of the light bulbs may go out (all possibilities
 being equally likely). What is the chance that after a
-lightning  at least two consecutive light bulbs are still shining.</li>
+lightning  at least two consecutive light bulbs are still
+shining.</p>
 
-<li>We have 4 letters and their respective addressed
+<p></p>
+
+<p>
+<b>EXERCISE 18:</b>&nbsp;We have 4 letters and their respective addressed
 envelopes. If the letters are placed randomly in the envelopes,
 then find the probability that exactly $k$ letters are in their correct
-envelopes for $k=1,2,3,4.$ </li>
+envelopes for $k=1,2,3,4.$ </p>
 
-<li>The numbers $1,2,...,n$ are arranged in random
+<p></p>
+
+<p>
+<b>EXERCISE 19:</b>&nbsp;The numbers $1,2,...,n$ are arranged in random
 order. Find the probability that the digits $1,2,3$ appear
-as neighbours in this order.</li>
+as neighbours in this order.</p>
 
-<li>$A$ throws six dice and wins if scores at least one
+<p></p>
+
+<p>
+<b>EXERCISE 20:</b>&nbsp;$A$ throws six dice and wins if he scores at least one
 ace. $B$ throws twelve dice and wins if he scores at least
-two aces. Who has the greater probability to win?</li>
+two aces. Who has the greater probability to win?</p>
 
-<li>Find the probability that among three random digits there
+<p></p>
+
+<p>
+<b>EXERCISE 21:</b>&nbsp;Find the probability that among three random digits there
 appear exactly 1,2 or 3 different digits. Also do the same for
-four random digits.</li>
+four random digits.</p>
 
-<li>Find the probability $p_r$ that in a sample of $r$
-random digits no two are equal.</li>
+<p></p>
 
-<li>If $n$ balls are placed at random among $n$ cells,
-find the probability that exactly one cell remains empty.</li>
+<p>
+<b>EXERCISE 22:</b>&nbsp;Find, for $r=1,2,3,...$, the probability $p_r$ that in a sample of $r$
+random digits no two are equal.</p>
 
-<li>A man is given $n$ keys of which only one fits his
+<p></p>
+
+<p>
+<b>EXERCISE 23:</b>&nbsp;If $n$ balls are placed at random among $n$ cells,
+find the probability that exactly one cell remains
+empty.</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 24:</b>&nbsp;A man is given $n$ keys of which only one fits his
 door. He tries them successively using SRSWOR until he finds the
 right key. Show that the probability that he will try $k$
-keys is $\frac 1n$ for $k=1,...,n.$</li>
+keys is $\frac 1n$ for $k=1,...,n.$</p>
 
-<li>Suppose that each of $n$ sticks is broken into one long
+<p></p>
+
+<p>
+<b>EXERCISE 25:</b>&nbsp;Suppose that each of $n$ sticks is broken into one long
 and one short part. The resulting $2n$ pieces are combined
 pairwise in a random fashion. What is the probability that the
 original pairings are restored? What is the probability that each
-long piece gets a short partner?</li>
+long piece gets a short partner?</p>
 
-<li>A box contains 90 good and 10 defective screws. If 10 screws
+<p></p>
+
+<p>
+<b>EXERCISE 26:</b>&nbsp;A box contains 90 good and 10 defective screws. If 10 screws
 are selected at random (SRSWOR), then find the probability that
-none of these are defective.</li>
+none of these are defective.</p>
 
-<li>From the set $\{a,b,c,d,e\}$ we draw an SRSWR of size
+<p></p>
+
+<p>
+<b>EXERCISE 27:</b>&nbsp;From the set $\{a,b,c,d,e\}$ we draw an SRSWR of size
 25. What is the probability that the sample will have 5
-occurrences of each of the letters?</li>
+occurrences of each of the letters?</p>
 
-<li>If $n$ men (including $A$ and $B$) stand in a
+<p></p>
+
+<p>
+<b>EXERCISE 28:</b>&nbsp;If $n$ men (including $A$ and $B$) stand in a
 row in random order, what is the probability that there will be
-exactly $r$ men between $A$ and $B?$</li>
+exactly $r$ men between $A$ and $B?$</p>
 
-<li>What is the probability that two throws with three dice each
+<p></p>
+
+<p>
+<b>EXERCISE 29:</b>&nbsp;What is the probability that two throws with three dice each
 will show the same configuration if (a) the dice are distinct
-(b) the dice are identical?</li>
+(<i>e.g.</i>, $(2,3,6)$ is not the same as $(3,2,6)$).
+(b) the dice are identical (<i>e.g.</i>, $\{2,3,6\}$ is the same
+as $\{3,2,6\}$)?</p>
 
-<li>A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
+<p></p>
+
+<p>
+<b>EXERCISE 30:</b>&nbsp;There are $n$ persons in a room. Assuming that each
+person is equally likely to be born in any day of the year (1
+year=365 days), find the probability that at least two persons
+share the same birthday. </p>
+
+<p></p>
+
+<h3><a
+name="Harder">Harder</a></h3>
+
+<p>
+<b>EXERCISE 31:</b>&nbsp;A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
 A news is spreading as rumour in this town as follows. Initially,
 only $p_1$  knows the news. He communicates the news to
  one of the
@@ -1053,15 +1175,12 @@ be $p_1$ again) randomly, and so on. Find the probability that the
 rumour spreads $r$ times without returning to $p_1.$
 Also, find the probability that the rumour spreads $r$ times
 without being repeated to any person.
- </li>
+ </p>
 
-<li>There are $n$ persons in a room. Assuming that each
-person is equally likely to be born in any day of the year (1
-year=365 days), find the probability that at least two persons
-share the same birthday. </li>
+<p></p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 32:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most1.png"></th>
@@ -1071,10 +1190,12 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p></p>
+
+<p>
+<b>EXERCISE 33:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most8.png"></th>
@@ -1084,10 +1205,12 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p></p>
+
+<p>
+<b>EXERCISE 34:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most19.png"></th>
@@ -1097,10 +1220,12 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p></p>
+
+<p>
+<b>EXERCISE 35:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most27.png"></th>
@@ -1110,10 +1235,12 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p></p>
+
+<p>
+<b>EXERCISE 36:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most28.png"></th>
@@ -1123,10 +1250,10 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p>
+<b>EXERCISE 37:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most31.png"></th>
@@ -1136,10 +1263,12 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>
-<center>
+<p></p>
+
+<p>
+<b>EXERCISE 38:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most32.png"></th>
@@ -1149,17 +1278,20 @@ share the same birthday. </li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-<li>Let $A_1,A_2,A_3$ be threee events. Let $p_1 = \sum
+<p></p>
+
+<p>
+<b>EXERCISE 39:</b>&nbsp;Let $A_1,A_2,A_3$ be three events. Let $p_1 = \sum
 P(A_i)$ and $p_2 = \sum_{i&lt; j} P(A_i\cap A_j)$ and $p_3 = P(A_1\cap A_2\cap A_3).$
 Find (in terms of $p_i$'s) the probability that exactly one of the
 events $A_1,A_2,A_3$ has occurred. Generalise to $n$
 events. Also find (and prove) a formula (in terms of
 the $p_i$'s) for the probability that exactly $r$ of
-the $n$ events has occurred.</li>
+the $n$ events has occurred.</p>
 
-</ol>
+<p></p>
 
 <h3>Comments</h3>
 To post an anonymous comment, click on the "Name" field. This
@@ -1172,7 +1304,7 @@ begin disqus code --> <div id="disqus_thread"></div>
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/basic.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://arnabc74.github.io/prob1_2024/basic.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "basic"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
