--- a/prob1_2024/index.html
+++ b/prob1_2024/index.html
@@ -3,7 +3,7 @@
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
 <link rel="stylesheet" type="text/css" href="../tools/ctut.css"/>
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
-<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
+<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
@@ -74,6 +74,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <style>
 body {
   margin: 0;
+  font-size: 40;
   //background: #000;
   //color: #fff;
 }
@@ -168,26 +169,10 @@ This is the class webpage for Probablity Theory I
 <b>Teacher:</b> Arnab Chakraborty</li>
 
 <li>
-<b>Office:</b> Room 914, ASU, 9-th floor of S N Bose
-Bhavan.</li>
-
-<li>
 <b>Email:</b>arnabc at isical dot ac in</li>
 
 </ul>
-Alternatively, you may use this diagram to contact me:
-<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/phone.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-If you want to leave an anonymous note for me, just use the
-comment box provided at the bottom of each page. 
+
 <h2><a
 name="Class notes">Class notes</a></h2>
 All the lecture notes are available from the <a href="notes.html">class notes page</a>. These notes are the
@@ -289,7 +274,7 @@ begin disqus code --> <div id="disqus_thread"></div>
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/index.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://arnabc74.github.io/prob1_2024/index.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "index"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
