--- a/prob1_2024/survival.html
+++ b/prob1_2024/survival.html
@@ -3,8 +3,11 @@
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
 <link rel="stylesheet" type="text/css" href="../tools/ctut.css"/>
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
-<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
+<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -67,13 +70,74 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
       }
     }
   });
-</script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script>
+<style>
+body {
+  margin: 0;
+  font-size: 40;
+  //background: #000;
+  //color: #fff;
+}
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.cu {
+  background: #ffcccc;
+}
+
+.bu {
+  background: #ccccff;
+}
+
+.scrpt {
+  border-left: 5px solid black;
+}
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
+</style>
+<script>
+window.onscroll = function() {myFunction()};
+window.onload = function() {myInit()};
+
+var header, tphldr;
+function myInit() {
+  header = document.getElementsByClassName("header");
+  tphldr = document.getElementById("topholder");
+}
+
+function myFunction() {
+  var index = -1
+  for(i=0;i<header.length;i++) {
+    if (window.pageYOffset > header[i].offsetTop) {
+       index = i
+    }
+    else {
+       break
+    }
+  }
+
+  if(index < 0) 
+    tphldr.innerHTML = "";
+  else
+    tphldr.innerHTML = header[index].innerHTML
+}
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
+</head><body>
+<div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
@@ -92,9 +156,6 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#How to cope with hostel life">How to cope with hostel life</a>
 </li>
-<li>
-<a href="#Unofficial help">Unofficial help</a>
-</li>
 </ul>
 <hr/>
 
@@ -109,6 +170,7 @@ possibly you feel a bit apprehensive about whether your good
 days will continue at ISI. Indeed, this apprehension is
 justified, as ISI days are going to be rather different from what
 you have seen so far. 
+<p></p>
 
 <h2><a
 name="What goes wrong?">What goes wrong?</a></h2>
@@ -190,10 +252,12 @@ though your annotated notes before the exam, because many
 questions get answered down the way. Also, you'll have precise
 questions to ask your teachers instead of a confused request like
 "Could not follow anything for the last month, please help!".
+<p></p>
 
 <h2><a
 name="How to cope with teachers">How to cope with teachers</a></h2> 
 
+<p></p>
 Teachers at ISI sometimes experiment with the course
 structure. If you feel that things are not working out well for
 you, you must first inform the teacher. Doing so collectively is
@@ -204,6 +268,7 @@ talking to him/her personally at least once.  <p></p> If the
 teacher's response is not satisfactory, then talk to the class
 teacher about it. If even that does not solve your problem, well,
 then start believing in God so that you can blame Him!
+<p></p>
 
 <h2><a
 name="How to cope with hostel life">How to cope with hostel life</a></h2>
@@ -219,24 +284,7 @@ home. Make friends (take the initiative), play, read story books,
 and above all don't skip meals or sleep. Also explore the nooks
 and corners of the campus, the rooftops, ponds, and the strange
 hidden stairways (I leave you to find them!). 
-<h1><a
-name="Unofficial help">Unofficial help</a></h1>
-If you are in some kind of distress and would like some
-unofficial private advice, you may contact the following faculty
-members (email addresses shown in parentheses. All emails are @isical.ac.in) 
-<ol type="">
-
-<li>Bimal Roy (bimal)</li>
-
-<li>Sandip Das (sandipdas)</li>
-
-<li>Arijit Bishnu (arijit)</li>
-
-<li>Arnab Chakraborty (arnabc)</li>
-
-</ol>
-These professors were all students here and are enthusiastic
-about helping students in distress.
+<p></p>
 
 <h3>Comments</h3>
 To post an anonymous comment, click on the "Name" field. This
@@ -249,7 +297,7 @@ begin disqus code --> <div id="disqus_thread"></div>
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/survival.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://arnabc74.github.io/prob1_2024/survival.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "survival"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
@@ -262,8 +310,7 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
 </noscript><!-- end disqus code --> 
-
-
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
@@ -271,6 +318,4 @@ s.setAttribute('data-timestamp', +new Date());
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
