--- a/prob1_2024/vit.html
+++ b/prob1_2024/vit.html
@@ -3,7 +3,11 @@
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
 <link rel="stylesheet" type="text/css" href="../tools/ctut.css"/>
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
-<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
+<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -55,15 +59,85 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   MathJax.Hub.Config({
     extensions: ["tex2jax.js","color.js"],
     jax: ["input/TeX","output/HTML-CSS"],
-    tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]}
+    tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]},
+    TeX: {
+      Macros: {
+        h: ["{\\hat #1}",1],
+        b: ["{\\overline #1}", 1],
+        row: "{\\mathcal R}",
+        col: "{\\mathcal C}",
+        nul: "{\\mathcal N}"
+      }
+    }
   });
-</script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script>
+<style>
+body {
+  margin: 0;
+  font-size: 40;
+  //background: #000;
+  //color: #fff;
+}
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.cu {
+  background: #ffcccc;
+}
+
+.bu {
+  background: #ccccff;
+}
+
+.scrpt {
+  border-left: 5px solid black;
+}
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
+</style>
+<script>
+window.onscroll = function() {myFunction()};
+window.onload = function() {myInit()};
+
+var header, tphldr;
+function myInit() {
+  header = document.getElementsByClassName("header");
+  tphldr = document.getElementById("topholder");
+}
+
+function myFunction() {
+  var index = -1
+  for(i=0;i<header.length;i++) {
+    if (window.pageYOffset > header[i].offsetTop) {
+       index = i
+    }
+    else {
+       break
+    }
+  }
+
+  if(index < 0) 
+    tphldr.innerHTML = "";
+  else
+    tphldr.innerHTML = header[index].innerHTML
+}
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
+</head><body>
+<div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
@@ -126,6 +200,7 @@ Thus, we are claiming that we cannot have a function $P$
  the three probability axioms as well as these two extra conditions.
 <p></p>
 
+<p></p>
  We shall provide  a quick proof of
 this here by contradiction. Let, if posible, there be such a
 function $P.$ We shall demonstrate a "bad" set $M$ for
@@ -139,6 +214,7 @@ still in $\ev.$ That is why, this technical point may safely
 be ignored during a first course on probability.
 <p></p>
 Now for the proof. Let's warm up first.
+<p></p>
 
 <h2><a
 name="Warming up">Warming up</a></h2>
@@ -192,6 +268,7 @@ the entire circle.
 </table>
 </center>
 Well, that's all the warm up we need! Now for the actual thing.
+<p></p>
 
 <h2><a
 name="A set without a probability">A set without a probability</a></h2>
@@ -201,6 +278,7 @@ S$, we shall denote the (shorter) arc length between them
 by $|xy|.$ This will always be in $[0,1/2].$
 <p></p>
 
+<p></p>
 Pick any point on the circle, colour
 it red. Also mark all points that are at a rational distance from
 this point with the same colour. Now pick a point that has not
@@ -233,6 +311,7 @@ This is a troublesome set. I claim that you cannot define its
 probability $P(M).$
 <p></p>
 
+<p></p>
 For any rational number $r\in [0,1)$ we denote
 by $M+r$ the set $M$ rotated clockwise by distance $r.$
 <p></p>
@@ -255,6 +334,7 @@ equals the entire circle.
 Now, let's say that $M$ has $P(M)=\ell.$
 Clearly, $\forall r\in[0,1)$ we must have $P(M+r)=\ell,$
 as well.
+<p></p>
 
 <p></p>
 Now, if $\ell = 0$ then the second
@@ -268,6 +348,7 @@ If $\ell&gt;0,$ then $P(\Omega)$ becomes $\ell+\ell+\cdots =
 This completes the proof
 <p></p>
 
+<p></p>
 But as you can see, such "bad" sets are pretty difficult to come
 across. So ignoring them will never cause any problem during our
 course. 
@@ -282,7 +363,7 @@ begin disqus code --> <div id="disqus_thread"></div>
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "http://www.isical.ac.in/~arnabc/prob1/vit.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://arnabc74.github.io/prob1_2024/vit.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "vit"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
@@ -302,6 +383,4 @@ s.setAttribute('data-timestamp', +new Date());
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
